--- a/auto_turn_off_light_at_night.yaml
+++ b/auto_turn_off_light_at_night.yaml
@@ -8,12 +8,13 @@ blueprint:
   input:
     light_target:
       name: Light or Switch
+      description: The light or switch to turn off
       selector:
-        target:
-          entity:
+        entity:
+          filter:
             domain:
-              - light
               - switch
+          multiple: true
 
     start_time:
       name: Start Time
@@ -40,12 +41,18 @@ blueprint:
           unit_of_measurement: seconds
 
 triggers:
-  - type: turned_on
-    entity_id: !input light_target
-    for:
-      hours: 0
-      minutes: 0
-      seconds: !input wait_time
+  trigger: time
+  description: Turn off the light at the start time
+  at: !input start_time
+
+  trigger: state
+  description: Turn off within the active time window after the wait time
+  entity_id: !input light_target
+  to: "on"
+  for:
+    hours: 0
+    minutes: 0
+    seconds: !input wait_time
       
 conditions:
   - condition: time
@@ -53,7 +60,7 @@ conditions:
     before: !input end_time
       
 actions:
-  - type: turn_off
-    entity_id: light_target 
+  action: switch.turn_off
+  entity_id: !input light_target
     
 mode: restart
