--- a/auto_turn_off_light_at_night.yaml
+++ b/auto_turn_off_light_at_night.yaml
@@ -41,16 +41,18 @@ blueprint:
           unit_of_measurement: seconds
 
 triggers:
-  trigger: time
-  at: !input start_time
+  - trigger: time
+    description: Turn off the light at the start time
+    at: !input start_time
 
-  trigger: state
-  entity_id: !input light_target
-  to: "on"
-  for:
-    hours: 0
-    minutes: 0
-    seconds: !input wait_time
+  - trigger: state
+    description: Turn off within the active time window after the wait time
+    entity_id: !input light_target
+    to: "on"
+    for:
+      hours: 0
+      minutes: 0
+      seconds: !input wait_time
       
 conditions:
   - condition: time
